--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/juliezembik/eat-dat-burger-app/issues"
   },
-  "homepage": "https://github.com/juliezembik/eat-dat-burger-app#readme"
+  "homepage": "https://github.com/juliezembik/eat-dat-burger-app#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mysql": "^2.17.1"
+  }
 }
